--- a/pokedex-react/index.html
+++ b/pokedex-react/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    
+    <link rel="icon" href="/img/pikachu_icon-icons.com_67535.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>PokeApi</title>
   </head>
   <body>
     <div id="root"></div>
