--- a/pokedex-react/index.html
+++ b/pokedex-react/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    
-    <link rel="icon" href="/img/pikachu_icon-icons.com_67535.png">
+
+    <link rel="icon" href="/img/pikachu_icon-icons.com_67535.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PokeApi</title>
   </head>
